@@ -14,6 +14,10 @@ NEXT
 [FIXED]
 Fixed prerequisites on HTTP::Server::Simple on Windows.
 
+[DOCUMENTATION]
+Improvements to the docs explaining explicitly about the subclassed
+methods we inherit from LWP::UserAgent.  Thanks, Lyle Hopkins!
+
 
 1.64        Thu Jul  1 10:41:00 CDT 2010
 ========================================
